tests/type/good/operators.hel
foreign io_unit: IO<()>;

a = 1 + 2 * 3;
b = 4.0 / 2.0;
c = 1 < 2;
d = true && false;
e = !true;

main = io_unit;
