tests/type/bad/match_arm_mismatch.hel
foreign io_unit: IO<()>;

type Color =
    | Red
    | Green
    ;

c: Color = Red;

x = match c {
    Red => 1,
    Green => true
};

main = io_unit;
